--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -102,7 +102,7 @@ div:focus, span:focus {
 }
 
 #header {
-  padding: 0 1em;
+  padding: 0 8px;
   position: fixed;
   z-index: 15;
   top: 0;
@@ -1233,7 +1233,7 @@ g {
 
 #content {
   margin: 15px auto;
-  padding: 0 1em;
+  padding: 0 8px;
   margin-top: 15px;
   user-select: none;
 }
